--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,10 +16,11 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [master]
+    #branches: [main]
+    #branches-ignore: [main]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [master]
+    branches: [main]
 
 ###############
 # Set the Job #
