--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -13,4 +13,5 @@ jobs:
         #G109: Potential Integer overflow made by strconv.Atoi result conversion to int16/32
         #G304: prevent loading configuration files from variable locations (we want to do this in local development)
         #G601: Implicit memory aliasing in for loop.  (disabled due to false positives for safe code)
-        run: gosec -exclude=G107,G109,G304,G601 ./...
+        #Because of https://github.com/mmogylenko/flexmessage/issues/1 going to exclude examples directory
+        run: gosec -exclude-dir=examples -exclude=G107,G109,G304,G601 ./...
